--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 
 
     <!---Enlaces relativos
-    <a href="servicios.html"> Ver servicios </a>-->
+    <a href="servicios html"> Ver servicios </a>-->
 
     <!---Enlaces internos | El id se crea con el simbolo # seguido del nombre de la sección
     <a href="#Testimonios"> Testimonios </a> -->
+
+
 
     <section id="donde">
         <p>Ahora si... Donde estan los fokin buenos hombres?</p>
