--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
                 <option value="">Uruguay</option>
                 <option value="">Otro</option>
         </select>
-        <input type="submit" value="enviar">
+        <input type="submit" value="enviar" class="enviar-boton">
 </body>
 </html>
